Improving the blueprints for content display

--- a/site/blueprints/layouts/services.yml
+++ b/site/blueprints/layouts/services.yml
@@ -10,7 +10,7 @@ tabs:
         type: pages
       listed:
         label: Service
-        layout: cards
+        layout: cardlets
         info: "{{ page.position }}"
         template: service
         type: pages
