--- a/site/blueprints/layouts/team.yml
+++ b/site/blueprints/layouts/team.yml
@@ -4,26 +4,38 @@ tabs:
     label: Team
     sections:
       drafts:
-        label: New Team Members
+        label: Mitarbeiter (Entwurf)
         info: "{{ page.position }}"
         template: team-member
         type: pages
+        status: draft
       listed:
-        label: Team
+        label: Mitarbeiter (Veröffentlicht)
         layout: cards
         info: "{{ page.position }}"
         template: team-member
         type: pages
+        status: published
         image:
           ratio: 1/1
           cover: true
 
   content:
-    label: Content
+    label: Inhalt
     preset: page
     pages: false
     fields:
       intro:
-        label: Intro
+        label: Einleitung
         type: textarea
-        size: medium
+        size: small
+    sidebar:
+      image:
+        extends: sections/image
+        label: Bild für Einleitung
+        min: 1
+        max: 1
+        image:
+          ratio: 21/9
+          cover: true
+        help: '<b>Info:</b> Ratio of 1600 x 686 works best.'
