--- a/site/blueprints/pages/team-member.yml
+++ b/site/blueprints/pages/team-member.yml
@@ -1,4 +1,4 @@
-title: Team Member
+title: Team-Mitglied
 preset: page
 icon: user
 
@@ -8,32 +8,29 @@ status:
 
 fields:
   intro:
-    label: Introduction / Quote
+    label: Einleitung
     type: textarea
     size: small
   phone:
-    label: Phone
+    label: Telefon
     type: tel
     width: 1/2
-    translate: false
   email:
-    label: Email
+    label: E-Mail
     type: email
     width: 1/2
-    translate: false
   linkedin:
     label: LinkedIn Link
     type: url
-    translate: false
   about:
-    label: About
+    label: Beschreibung / CV
     type: textarea
     size: large
 
 sidebar:
   image:
     extends: sections/image
-    label: Team Member
+    label: Team-Mitglied
     min: 1
     max: 1
     image:
