Optimizing text below images to include the size of the file

--- a/site/blueprints/layouts/team.yml
+++ b/site/blueprints/layouts/team.yml
@@ -38,4 +38,5 @@ tabs:
         image:
           ratio: 21/9
           cover: true
+          info: "{{ file.dimensions }} - Size: {{ file.size }} bytes"
         help: '<b>Info:</b> Ratio of 1600 x 686 works best.'
